# ZFModuleDemo_lib

./: README.md
zfproj/Android/ZFModuleDemo_lib/: settings.gradle
zfproj/Android/ZFModuleDemo_lib/zflib/: CMakeLists.txt  build.gradle
zfproj/Android/ZFModuleDemo_lib/zflib/src/main/: AndroidManifest.xml
zfproj/Android/ZFModuleDemo_lib/zfprojConfigHelper/: build.gradle
zfproj/Qt/ZFModuleDemo_lib/: ZFModuleDemo_lib.pro
zfproj/cmake/ZFModuleDemo_lib/: CMakeLists.txt
zfproj/iOS/ZFModuleDemo_lib/: Podfile
zfproj/iOS/ZFModuleDemo_lib/ZFModuleDemo_lib.xcodeproj/: project.pbxproj
zfproj/iOS/ZFModuleDemo_lib/ZFModuleDemo_lib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
zfproj/iOS/ZFModuleDemo_lib/ZFModuleDemo_lib.xcworkspace/: contents.xcworkspacedata
zfproj/iOS/ZFModuleDemo_lib/ZFModuleDemo_lib_zfprojConfig.xcodeproj/: dummy.mm  project.pbxproj
zfscript/: zfautoscript_cleanup_ZFModuleDemo_lib.zfsh  zfautoscript_release_ZFModuleDemo_lib.zfsh  zfautoscript_zfproj.txt
zfsrc/: ZFModuleDemo_lib.h
zfsrc/ZFModuleDemo_lib/: ZFModuleDemo_libDef.cpp  ZFModuleDemo_libDef.h
zfsrc/ZFModuleDemo_lib/protocol/: ZFProtocolZFModuleDemo.cpp  ZFProtocolZFModuleDemo.h
